<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">

    <EditText
        android:id="@+id/firstName_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:ems="10"
        android:hint="@string/firstNameLabel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastName_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/lastNameLabel"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName_edit" />

    <ImageView
        android:id="@+id/im_gender_edit"
        android:layout_width="170dp"
        android:layout_height="213dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectGender_edit"
        app:layout_constraintVertical_bias="0.079"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/selectGender_edit"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/selectGenderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName_edit" />

    <Button
        android:id="@+id/saveButton_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="56dp"
        android:text="@string/saveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/gender_rdgrp_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/saveButton_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/im_gender_edit">

        <RadioButton
            android:id="@+id/rd_male_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/male_label" />

        <RadioButton
            android:id="@+id/rd_female_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/female_label" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>